              Netpbm 10.44 (September 2008)).
              
              pamtotiff: fix bug: XRESOLUTION, YRESOLUTION, and RESOLUTIONUNIT
              not allowed in -tags.  Broken at least since 10.35.

              pnmpsnr: fix crash when invoked (invalidly) with only one
              argument.  Always broken.

              leaftoppm: fix incorrect determination of whether input is
              Interleaf on 64 bit systems.

              pnmmontage: fix totally wrong output.  Broken in 10.44
              (August 2008).

              pnmmontage: fix random stuff placed in unoccupied space in the
              output image.  Always broken (program was new in 9.10 (January
              2001).

              pbmpscale, pgmhist, pampick, pamtompfont: fix wild pointer
              in command line parsing.  Bug has always been there in 
              pampick, pamtompfont, since 10.50 (March 2010) in pbmpscale,
              since 10.44 (September 2008) in pgmhist.              

              xbmtopbm: fix incorrect output, memory leak.  Thanks Prophet of
              the Way <afu@wta.att.ne.jp>.

              sunicontopnm: Fix incorrect output for depth 8.  Always broken
              (depth = 8 capability was added in 10.53 (December 2010).

              pamgauss: Fix bug: erroneously says -maxval is too big on 64 bit
              system.  Always broken (Pamgauss was added in 10.23 (July 2004).

              ppmpat: Fix bug: wrong output with -poles.  Broken in 10.47
              (June 2009).

              Add tests.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

12.09.30 BJH  Release 10.60.00

              xpmtoppm: major speedup for 3-character-per pixel files,
              memory reduction for all files: use hash table instead of
              linear search or direct index, go row by row.

              xpmtoppm: fix bogus "color number too large" failure.  Broken
              in 10.49 (December 2009).
